--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-image-picker",
-  "version": "2.3.1",
+  "name": "@connectedbits/react-native-image-picker",
+  "version": "2.4.0",
   "description": "A React Native module that allows you to use native UI to select media from the device library or directly from the camera",
   "react-native": "src/index.ts",
   "types": "lib/typescript/index.d.ts",
@@ -14,26 +14,8 @@
     "/lib",
     "/*.podspec"
   ],
-  "author": "Marc Shilling (marcshilling)",
-  "contributors": [
-    {
-      "name": "Johan du Toit",
-      "email": "jdutoit.dev@gmail.com"
-    },
-    {
-      "name": "Matheus Santos",
-      "email": "vorj.dux@gmail.com"
-    },
-    {
-      "name": "Yoann Fuks",
-      "email": "yfuks@student.42.fr"
-    },
-    {
-      "name": "Alexander Ustinov",
-      "email": "rusfearuth@gmail.com"
-    }
-  ],
-  "homepage": "https://github.com/react-community/react-native-image-picker#readme",
+  "author": "",
+  "homepage": "https://github.com/connectedbits/react-native-image-picker#readme",
   "license": "MIT",
   "scripts": {
     "start": "react-native start",
