allow namespaced names from package.json

--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "image",
     "picker"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.4.5",
